<resources>
    <string name="app_name">CalIngredientFood</string>

    <!-- bottom navigation view -->
    <string name="search">검색</string>
    <string name="meal">식단</string>
    <string name="management">관리</string>

    <string name="greetings">식단 관리를 시작해보세요</string>
    <string name="please_slideUp">저를 위로 밀어주세요</string>

    <string name="please_food_name">식품명 입력</string>
    <string name="please_custom_food_name">사용자 정의 식품명 입력</string>
    <string name="please_enter_a_search_term">검색어를 입력해주세요.</string>

    <string name="add">추가</string>
    <string name="date_desc_info">날짜 : %s</string>
    <string name="calorie_desc_info">칼로리 : %1$.2f(kcal)</string>
    <string name="carbohydrate_desc_info">탄수화물 : %1$.2f(g)</string>
    <string name="protein_desc_info">단백질 : %1$.2f(g)</string>
    <string name="fat_desc_info">지방 : %1$.2f(g)</string>
    <string name="sugar_desc_info">당류 : %1$.2f(g)</string>
    <string name="salt_desc_info">나트륨 : %1$.2f(mg)</string>
    <string name="cholesterol_desc_info">콜레스테롤 : %1$.2f(mg)</string>
    <string name="saturated_fatty_acid_desc_info">포화지방산 : %1$.2f(g)</string>
    <string name="trans_fat_desc_info">트랜스지방산 : %1$.2f(g)</string>
    <string name="three_major_ntr_desc_info">탄, 단, 지 : %1$.2f / %2$.2f / %3$.2f (g)</string>
    <string name="serving_weight_desc_info">%s회 제공량 : %s(g)</string>
    <string name="begin_year_desc_info">구축년도 : %s년</string>

    <string name="descriptionKor">식품</string>
    <string name="company">업체</string>
    <string name="calorie">칼로리</string>
    <string name="calorie_unit">kcal</string>
    <string name="serving_weight">1회 제공량</string>
    <string name="carbohydrate">탄수화물</string>
    <string name="protein">단백질</string>
    <string name="fat">지방</string>
    <string name="sugar">당류</string>
    <string name="salt">나트륨</string>
    <string name="cholesterol">콜레스테롤</string>
    <string name="saturated_fatty_acid">포화지방산</string>
    <string name="trans_fat">트랜스지방산</string>

    <string name="calorie_info">%1$.2f(kcal)</string>
    <string name="carbohydrate_info">%1$.2f(g)</string>
    <string name="protein_info">%1$.2f(g)</string>
    <string name="fat_info">%1$.2f(g)</string>
    <string name="sugar_info">%1$.2f(g)</string>
    <string name="salt_info">%1$.2f(mg)</string>
    <string name="cholesterol_info">%1$.2f(mg)</string>
    <string name="saturated_fatty_acid_info">%1$.2f(g)</string>
    <string name="trans_fat_info">%1$.2f(g)</string>

    <string name="ui_state_empty">%s와(과)\n 일치하는 검색결과가 없습니다.</string>
    <string name="ui_state_fail">다시 시도 해주세요.</string>
    <string name="ui_state_exception">서비스 이용에 불편을 드려 죄송합니다.</string>

    <string name="okay">확인</string>
    <string name="same_value_exists">동일한 식품 정보가 존재합니다.</string>

    <string name="food">식품</string>
    <string name="custom_food">사용자 정의 식품</string>

    <string name="please_set_permissions">저장공간 권한이 필요합니다.</string>

    <string name="please_input_descriptionKor">식품명을 입력해주세요.</string>
    <string name="please_input_company">업체명을 입력해주세요.</string>
    <string name="please_input_calorie">칼로리를 입력해주세요. (단위: kcal)</string>
    <string name="please_input_serving_weight">1회 제공량을 입력해주세요. (단위: g)</string>
    <string name="please_input_carbohydrate">탄수화물을 입력해주세요. (단위: g)</string>
    <string name="please_input_protein">단백질을 입력해주세요. (단위: g)</string>
    <string name="please_input_fat">지방을 입력해주세요. (단위: g)</string>

    <string name="create_custom_food_ntr_irdnt">나만의\n식품 영양 성분표를\n만들어 볼까요?</string>
    <string name="save">저장하기</string>

    <string name="must_not_be_empty">필수 항목이 비어있습니다.</string>

    <string name="food_management">식품 관리</string>
    <string name="meal_management">식단 관리</string>
    <string name="average_calorie_intake">평균 칼로리 섭취량</string>
    <string name="three_major_ntr_chart_center">3대 영양소\n 백분율</string>

    <string name="initialize">초기화</string>
    <string name="in_order_of_highest_calorie">칼로리 높은 순</string>
    <string name="in_order_of_highest_carbohydrate">탄수화물 높은 순</string>
    <string name="in_order_of_highest_protein">단백질 높은 순</string>
    <string name="in_order_of_highest_fat">지방 높은 순</string>

    <string name="all">전체</string>
    <string name="january">1월</string>
    <string name="february">2월</string>
    <string name="march">3월</string>
    <string name="april">4월</string>
    <string name="may">5월</string>
    <string name="june">6월</string>
    <string name="july">7월</string>
    <string name="august">8월</string>
    <string name="september">9월</string>
    <string name="october">10월</string>
    <string name="november">11월</string>
    <string name="december">12월</string>

    <string name="empty_view_month_category_title">텅~ 비어있어요.</string>
    <string name="empty_view_month_category_description">식단 페이지에서 추가해주세요!!</string>
    <string name="delete">삭제</string>
    <string name="delete_selection">선택삭제</string>
    <string name="delete_all">전체삭제</string>
    <string name="number_of_items">선택항목(%d)</string>

    <string name="current_position">%s</string>
    <string name="look">보기</string>
</resources>