<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="sang.gondroid.calingredientfood.presentation.management.ManagementViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <soup.neumorphism.NeumorphButton
            android:id="@+id/mealManagementButton"
            style="@style/Theme.CalIngredientFood.Neumorphism.Small.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_food"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/meal_management"
            app:layout_constraintBottom_toTopOf="@+id/averageCalorieCardView"
            app:layout_constraintEnd_toStartOf="@+id/foodManagementButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <soup.neumorphism.NeumorphButton
            android:id="@+id/foodManagementButton"
            style="@style/Theme.CalIngredientFood.Neumorphism.Small.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_folder"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/food_management"
            app:layout_constraintBottom_toBottomOf="@+id/mealManagementButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/mealManagementButton"
            app:layout_constraintTop_toTopOf="@+id/mealManagementButton" />


        <soup.neumorphism.NeumorphCardView
            android:id="@+id/averageCalorieCardView"
            style="@style/Theme.CalIngredientFood.Neumorphism"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/threeMajorNtrCardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mealManagementButton"
            app:layout_constraintVertical_chainStyle="packed"
            app:neumorph_cornerFamily="oval"
            app:neumorph_cornerSize="10dp"
            app:neumorph_shapeAppearance="@style/SquareCardView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

                <TextView
                    android:id="@+id/averageCalorieIntakeTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/average_calorie_intake"
                    android:textColor="@color/contrasting_color"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/averageCalorieIntakeInfoTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginTop="15dp"
                    android:gravity="bottom|center_horizontal"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@{viewModel.averageCalorie}"
                    android:textColor="@color/blue"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/calorieUnitTextView"
                    app:layout_constraintEnd_toStartOf="@+id/view"
                    app:layout_constraintStart_toStartOf="@+id/averageCalorieIntakeTextView"
                    app:layout_constraintTop_toBottomOf="@+id/averageCalorieIntakeTextView"
                    app:layout_constraintVertical_chainStyle="packed" />

                <TextView
                    android:id="@+id/calorieUnitTextView"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginBottom="15dp"
                    android:gravity="center_horizontal"
                    android:text="@string/calorie_unit"
                    android:textColor="@color/hint_color"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/averageCalorieIntakeInfoTextView"
                    app:layout_constraintStart_toStartOf="@+id/averageCalorieIntakeInfoTextView"
                    app:layout_constraintTop_toBottomOf="@+id/averageCalorieIntakeInfoTextView" />

                <View
                    android:id="@+id/view"
                    android:layout_width="1dp"
                    android:layout_height="0dp"
                    android:layout_marginEnd="5dp"
                    android:background="@color/light_contrasting_color"
                    app:layout_constraintBottom_toBottomOf="@+id/calorieUnitTextView"
                    app:layout_constraintEnd_toStartOf="@+id/lineChart"
                    app:layout_constraintStart_toEndOf="@+id/averageCalorieIntakeInfoTextView"
                    app:layout_constraintTop_toTopOf="@+id/averageCalorieIntakeInfoTextView" />

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/lineChart"
                    setAverageCalorieChart="@{viewModel.calorieList}"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="@+id/calorieUnitTextView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/view"
                    app:layout_constraintTop_toTopOf="@+id/averageCalorieIntakeInfoTextView" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </soup.neumorphism.NeumorphCardView>

        <soup.neumorphism.NeumorphCardView
            android:id="@+id/threeMajorNtrCardView"
            style="@style/Theme.CalIngredientFood.Neumorphism"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/averageCalorieCardView"
            app:layout_constraintStart_toStartOf="@+id/averageCalorieCardView"
            app:layout_constraintTop_toBottomOf="@+id/averageCalorieCardView"
            app:neumorph_shapeAppearance="@style/SquareCardView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

                <com.github.mikephil.charting.charts.PieChart
                    setThreeMajorNtrChart="@{viewModel.threeMajorNtrList}"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </soup.neumorphism.NeumorphCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>